--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 :root {
-    --main-bg-color: white;
+    --main-bg-color: linear-gradient(45deg, #e66465, #9198e5);
+    --main-bg-light-color: white;
     --main-txt-color: black;
 }
 
@@ -7,7 +8,7 @@ body {
     margin: 0;
     background-color: var(--main-bg-color);
     color: var(--main-txt-color);
-    font-family: sans-serif;
+    font-family: "Comic Sans MS", "Comic Sans", cursive, sans-serif;
 }
 
 table {
@@ -20,7 +21,7 @@ nav>ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #F4B9B2;
+    background: var(--main-bg-color);
 }
 
 nav>ul>li {
@@ -44,44 +45,44 @@ nav>ul>li a {
     margin: 2em;
 }
 
-.main,
-.rightpane {
-    /*Dette er å fylle den tomme plassen 100vh er høyden av hele skjermflaten, og 2 em den plassen header og footer tar*/
-    height: calc(100vh - (5em));
+.splash {
+    grid-area: splash;
+    height: calc(100%-10%);
+}
+
+.splash>img {
+    width: 100%;
+    height: 100vh-10em;
+    filter: blur(3px);
+}
+
+.splash>div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .main {
     grid-area: main;
-    background-color: #E5B181;
-}
-
-.rightpane {
-    grid-area: right;
-    background-color: #DAEDBD;
-}
-
-.rightpane>iframe {
-    height: 80vh;
+    background-color: var(--main-bg-light-color);
+    text-align: center;
 }
 
 .footer {
     grid-area: footer;
     text-align: center;
-    height: 2em;
-    background-color: #F4B9B2;
-    position: fixed;
+    background: var(--main-bg-color);
     width: 100%;
-    bottom: 0;
 }
 
 .footer p {
-    margin: 0;
     font-size: 1em;
 }
 
 .grid-container {
     display: grid;
-    grid-template-areas: 'header header header header' 'main main main right' 'footer footer footer footer';
+    grid-template-areas: 'header header header header' 'splash splash splash splash' 'main main main main' 'footer footer footer footer';
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
 }
